"update git url"

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = R-shinythemes
 url = https://cran.r-project.org/src/contrib/shinythemes_1.1.1.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/neverpanic/google-font-download.git
 
 [autospec]
 # build 32 bit libraries
